--- a/assignment1/features.ipynb
+++ b/assignment1/features.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,9 +107,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done extracting features for 1000 / 49000 images\n",
+      "Done extracting features for 2000 / 49000 images\n",
+      "Done extracting features for 3000 / 49000 images\n",
+      "Done extracting features for 4000 / 49000 images\n",
+      "Done extracting features for 5000 / 49000 images\n",
+      "Done extracting features for 6000 / 49000 images\n",
+      "Done extracting features for 7000 / 49000 images\n",
+      "Done extracting features for 8000 / 49000 images\n",
+      "Done extracting features for 9000 / 49000 images\n",
+      "Done extracting features for 10000 / 49000 images\n",
+      "Done extracting features for 11000 / 49000 images\n",
+      "Done extracting features for 12000 / 49000 images\n",
+      "Done extracting features for 13000 / 49000 images\n",
+      "Done extracting features for 14000 / 49000 images\n",
+      "Done extracting features for 15000 / 49000 images\n",
+      "Done extracting features for 16000 / 49000 images\n",
+      "Done extracting features for 17000 / 49000 images\n",
+      "Done extracting features for 18000 / 49000 images\n",
+      "Done extracting features for 19000 / 49000 images\n",
+      "Done extracting features for 20000 / 49000 images\n",
+      "Done extracting features for 21000 / 49000 images\n",
+      "Done extracting features for 22000 / 49000 images\n",
+      "Done extracting features for 23000 / 49000 images\n",
+      "Done extracting features for 24000 / 49000 images\n",
+      "Done extracting features for 25000 / 49000 images\n",
+      "Done extracting features for 26000 / 49000 images\n",
+      "Done extracting features for 27000 / 49000 images\n",
+      "Done extracting features for 28000 / 49000 images\n",
+      "Done extracting features for 29000 / 49000 images\n",
+      "Done extracting features for 30000 / 49000 images\n",
+      "Done extracting features for 31000 / 49000 images\n",
+      "Done extracting features for 32000 / 49000 images\n",
+      "Done extracting features for 33000 / 49000 images\n",
+      "Done extracting features for 34000 / 49000 images\n",
+      "Done extracting features for 35000 / 49000 images\n",
+      "Done extracting features for 36000 / 49000 images\n",
+      "Done extracting features for 37000 / 49000 images\n",
+      "Done extracting features for 38000 / 49000 images\n",
+      "Done extracting features for 39000 / 49000 images\n",
+      "Done extracting features for 40000 / 49000 images\n",
+      "Done extracting features for 41000 / 49000 images\n",
+      "Done extracting features for 42000 / 49000 images\n",
+      "Done extracting features for 43000 / 49000 images\n",
+      "Done extracting features for 44000 / 49000 images\n",
+      "Done extracting features for 45000 / 49000 images\n",
+      "Done extracting features for 46000 / 49000 images\n",
+      "Done extracting features for 47000 / 49000 images\n",
+      "Done extracting features for 48000 / 49000 images\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.features import *\n",
     "\n",
@@ -148,9 +203,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (k_nearest_neighbor.py, line 212)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/ubuntu/.local/lib/python3.5/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2963\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[1;32m\"<ipython-input-7-a92821e356e2>\"\u001b[0m, line \u001b[1;32m3\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from cs231n.classifiers.linear_classifier import LinearSVM\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/disk300g/cs231n/cs231n/assignment1/cs231n/classifiers/__init__.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from cs231n.classifiers.k_nearest_neighbor import *\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/disk300g/cs231n/cs231n/assignment1/cs231n/classifiers/k_nearest_neighbor.py\"\u001b[0;36m, line \u001b[0;32m212\u001b[0m\n\u001b[0;31m    print closest_y.shape #(1, 5000)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the validation set to tune the learning rate and regularization strength\n",
     "\n",
@@ -171,6 +239,23 @@
     "# with different numbers of bins in the color histogram. If you are careful    #\n",
     "# you should be able to get accuracy of near 0.44 on the validation set.       #\n",
     "################################################################################\n",
+    "\n",
+    "for lr in learning_rates:\n",
+    "    for reg in regularization_strengths:\n",
+    "        svm = LinearSVM()\n",
+    "        svm.train(X_train_feats, y_train, learning_rate=lr, reg=reg, num_iters=1000)\n",
+    "        y_train_pred = svm.predict(X_train_feats)\n",
+    "        y_val_pred = svm.predict(X_val_feats)\n",
+    "        \n",
+    "        train_acc = np.mean(y_train_pred == y_train)\n",
+    "        val_acc = np.mean(y_val_pred == y_val)\n",
+    "        \n",
+    "        results[(lr, reg)] = (train_acc, val_acc)\n",
+    "        \n",
+    "        if(val_acc > best_val):\n",
+    "            best_svm = svm\n",
+    "            best_val = val_acc\n",
+    "\n",
     "################################################################################\n",
     "#                              END OF YOUR CODE                                #\n",
     "################################################################################\n",
@@ -294,6 +379,20 @@
     "test_acc = (best_net.predict(X_test_feats) == y_test).mean()\n",
     "print(test_acc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
