--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -295,9 +295,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "OD-lab-py35",
    "language": "python",
-   "name": "python2"
+   "name": "od-lab-py35"
   },
   "language_info": {
    "codemirror_mode": {
@@ -309,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
